# connect4

./: README.md  connect4.cabal
.stack-work/install/x86_64-linux/lts-7.3/8.0.1/doc/connect4-0.1.0.1/: LICENSE
.stack-work/install/x86_64-linux/lts-7.3/8.0.1/flag-cache/: connect4-0.1.0.1-2fMdAgEIDS51w47GvFtft7  connect4-0.1.0.1-WKoGruS9yd1l9XgtChq8q
.stack-work/install/x86_64-linux/lts-7.3/8.0.1/lib/x86_64-linux-ghc-8.0.1/connect4-0.1.0.0-72dbdpWjjZ73fXhjRJQRqF/: Connect4.dyn_hi  Game.dyn_hi  Lib.dyn_hi  Lib.hi
.stack-work/install/x86_64-linux/lts-7.3/8.0.1/lib/x86_64-linux-ghc-8.0.1/connect4-0.1.0.1-2fMdAgEIDS51w47GvFtft7/: GridScan.dyn_hi  Lib.dyn_hi  Types.dyn_hi  Unstable.dyn_hi
.stack-work/install/x86_64-linux/lts-7.3/8.0.1/lib/x86_64-linux-ghc-8.0.1/connect4-0.1.0.1-WKoGruS9yd1l9XgtChq8q/: GridScan.dyn_hi  Lib.dyn_hi  Unstable.dyn_hi
.stack-work/install/x86_64-linux/lts-7.3/8.0.1/pkgdb/: connect4-0.1.0.0-72dbdpWjjZ73fXhjRJQRqF.conf  connect4-0.1.0.1-2fMdAgEIDS51w47GvFtft7.conf  connect4-0.1.0.1-WKoGruS9yd1l9XgtChq8q.conf  package.cache
app/: Main.hs
benchmark/: Bench.hs
src/: #Lib.hs#  .#Lib.hs  Connect4.hs  Game.hs  GridScan.hs  GridScan.hs~  Lib.hs  Types.hs  Types.hs~  Unstable.hs  Unstable.hs~
test/: HLint.hs  LibSpec.hs  LibSpec.hs~
